# emcat

./: .gitignore  .python-semantic-release  CHANGELOG.md  LICENSE  README.md  SECURITY.md  TODO.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: release.yml
doc/: client.cast  example.txt  logo-open-graph.xcf  server.cast
src/emcat/: common.py  dump.py  main.py
