[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emcat"
version = "0.3.4"
description = "A netcat-inspired CLI tool that uses the Meshtastic library to connect to a Meshtastic device via serial."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
  { name = "Christoph Vieth", email = "christoph@vieth.me" }
]
dependencies = [
  "meshtastic"
]
keywords = ["CLI", "meshtastic", "netcat", "emcat"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X"
]

[project.urls]
"Repository" = "https://github.com/zefiet/emcat"

[project.scripts]
emcat = "emcat.main:main"

[tool.semantic_release]
version_source = "commit"          # Use the version in the file (project.version) as the source
branch = "main"                    # Only release from the main branch

version_variable = "pyproject.toml:project.version"  # Update version in pyproject.toml under [project]
commit_message = "chore(release): bump version to {version}"  # Commit message for the version bump
upload_to_pypi = false             # PyPI upload is handled separately (e.g., in GitHub Actions)
changelog_file = "CHANGELOG.md"    # Path to the changelog file
update_changelog = true            # Automatically update the changelog on release