[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emcat"
version = "0.3.5"
description = "A netcat-inspired CLI tool that uses the Meshtastic library to connect to a Meshtastic device via serial."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
  { name = "Christoph Vieth", email = "christoph@vieth.me" }
]
dependencies = [
  "meshtastic"
]
keywords = ["CLI", "meshtastic", "netcat", "emcat"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X"
]

[project.urls]
"Repository" = "https://github.com/zefiet/emcat"

[project.scripts]
emcat = "emcat.main:main"

[tool.semantic_release]
branch = "main"
version_source = "toml"  # Wichtig: Quelle der Version angeben
version_toml = ["pyproject.toml:project.version"]
changelog_file = "CHANGELOG.md"
update_changelog = true
upload_to_pypi = false  # Optional, je nach Workflow

# Entferne die auskommentierten/veralteten Einträge