[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emcat"
version = "0.4.1"
description = "A netcat-inspired CLI tool that uses the Meshtastic library to connect to a Meshtastic device via serial."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
  { name = "Christoph Vieth", email = "christoph@vieth.me" }
]
dependencies = [
  "meshtastic"
]
keywords = ["CLI", "meshtastic", "netcat", "emcat"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X"
]

[project.urls]
"Repository" = "https://github.com/zefiet/emcat"

[project.scripts]
emcat = "emcat.cat:main"
emdump = "emcat.dump:main"

[tool.semantic_release]
branch = "main"                                # Only release from the main branch
version_source = "toml"                        # Use the TOML file as the source of the version
version_toml = ["pyproject.toml:project.version"]  # Specify the file and key to update the version
changelog_file = "CHANGELOG.md"                  # Path to the changelog file
update_changelog = true                         # Automatically update the changelog during release
upload_to_pypi = false                          # Do not automatically upload to PyPI
commit_message = "chore(release): bump version to {version}"  # Commit message for version bump